fix(website): truncate titles on mobile
Perviously they would scroll. This caused problems for certain browsers.

--- a/packages/website/builder/css/nav.css
+++ b/packages/website/builder/css/nav.css
@@ -33,8 +33,9 @@
   box-sizing: border-box;
 }
 #nav_mobile-title {
-  overflow: scroll;
+  overflow: hidden;
   white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 /* === navigation === */
